# pg_x

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/commands/: export.rs  info.rs  listen.rs  mod.rs  query.rs  replicate.rs
src/downstream/: contract.rs  kafka.rs  mod.rs  rabbitmq.rs  shell.rs  sink.rs  webhook.rs
src/replication/: client.rs  decoder.rs  error.rs  event.rs  framing.rs  lsn.rs  messages.rs  mod.rs  proto.rs  scram.rs  slot.rs
src/utils/: config.rs  csv.rs  db.rs  excel.rs  format.rs  json.rs  mod.rs
