[package]
name = "pgx"
version = "0.1.0"
edition = "2021"
description = "A feature-rich PostgreSQL CLI tool — beyond psql"
authors = ["jyasuu"]

[[bin]]
name = "pgx"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Postgres async driver (control plane: slot management, wal_level check)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# TLS for the control-plane connection (optional)
tokio-postgres-rustls = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }

# Excel output
rust_xlsxwriter = "0.64"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Output / display
comfy-table = "7"
indicatif = "0.17"
console = "0.15"
colored = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
toml = "0.8"
url = "2"
regex = "1"
csv = "1"
once_cell = "1"

# Async utilities
async-trait = "0.1"

# Replication frame parsing and SCRAM auth
# (used by our inlined replication client in src/replication/)
bytes = "1"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"

# RabbitMQ (AMQP) - feature-gated
lapin = { version = "2", optional = true }

# HTTP client for webhook - feature-gated
reqwest = { version = "0.12", features = ["json"], optional = true }

# Kafka - feature-gated (requires librdkafka system library)
rdkafka = { version = "0.36", optional = true }

[features]
default = ["rabbitmq", "webhook"]
tls = ["tokio-postgres-rustls", "rustls"]
rabbitmq = ["lapin"]
kafka = ["rdkafka"]
webhook = ["reqwest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
